# shared_memory

./: .dockerignore  .gitignore  Dockerfile  c  c.c  p.py  p2.py  readme.md  runner.sh
go/: main.go
js/: main.js  package-lock.json  package.json  script.js  utils.js
malek_taj/: BUILD.bazel  CMakeLists.txt  local.env  main  main.c  main.cpp  settings.cpp  settings.f  timed_set.cpp  timed_set.f  timed_set_test.cpp  utils.cpp  utils.f
malek_taj/config/: docker.env  local.env
python_client/: BUILD.bazel  main.py  requirements.txt  settings.py
python_client/config/: local.env
python_client/utils/: __init__.py  decorators.py  lock.py  shared_memory.py  zmq.py
python_service/: BUILD.bazel  clear_shared_memory.py  main.py  methods.py  settings.py
python_service/client/: hello_function.py  main.py
python_service/config/: local.env
python_service/utils/: __init__.py  decorators.py  lock.py  shared_memory.py  validator.py  zmq.py
shared/: BUILD.bazel  shared_memory.c
